Fixed page jumping

--- a/Picosmos.Explorer/Styles/Main.less
+++ b/Picosmos.Explorer/Styles/Main.less
@@ -17,6 +17,7 @@ body {
     color: black;
     margin-left: 4px;
     font-size: 9pt;
+    cursor: pointer;
 
     &:hover {
         background-color: #D0D0D0;
